--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
@@ -26,11 +26,11 @@
            <Button fx:id="windButton" layoutX="135.0" layoutY="531.0" mnemonicParsing="false" onAction="#onWindButtonClicked" styleClass="basicButton" text="WIND" />
            <Button fx:id="visibilityButton" layoutX="247.0" layoutY="531.0" mnemonicParsing="false" onAction="#onVisibilityButtonClicked" styleClass="basicButton" text="VISIBILITY" />
 
-           <Label fx:id="chartErrorLabel" layoutX="411.0" layoutY="542.0" prefHeight="30.0" prefWidth="497.0" styleClass="smallText" />
+           <Label fx:id="chartErrorLabel" layoutX="411.0" layoutY="542.0" prefHeight="30.0" prefWidth="609.0" styleClass="smallText" />
        </AnchorPane>
        <PieChart fx:id="conditionChart" labelLineLength="0.0" labelsVisible="false" layoutX="717.0" layoutY="31.0" maxHeight="500.0" maxWidth="360.0" minHeight="500.0" minWidth="360.0" prefHeight="500.0" prefWidth="360.0" title="ConditionChart" />
        <PieChart fx:id="maintenanceChart" labelLineLength="0.0" labelsVisible="false" layoutX="717.0" layoutY="25.0" maxHeight="500.0" maxWidth="360.0" minHeight="500.0" minWidth="360.0" prefHeight="500.0" prefWidth="360.0" title="MaintenanceChart" />
-       <AnchorPane fx:id="datePickerPane" layoutX="1148.0" layoutY="223.0" prefHeight="224.0" prefWidth="203.0" style="-fx-border-color: blue; -fx-border-width: 3;">
+       <AnchorPane fx:id="datePickerPane" layoutX="1148.0" layoutY="223.0" prefHeight="224.0" prefWidth="203.0">
            <children>
                <Label fx:id="startDateLabel" layoutX="11.0" layoutY="14.0" styleClass="smallText" text="Select start date" />
                <DatePicker fx:id="startDatePicker" layoutX="11.0" layoutY="46.0" />
@@ -42,7 +42,7 @@
        </AnchorPane>
       <Button fx:id="conditionModeButton" layoutX="1083.0" layoutY="25.0" mnemonicParsing="false" onAction="#onConditionModeClicked" onMouseClicked="#onApplyMaintenanceClick" styleClass="basicButton" text="Condition" />
       <Button fx:id="maintenanceModeButton" layoutX="1237.0" layoutY="25.0" mnemonicParsing="false" onAction="#onMaintenanceModeClicked" onMouseClicked="#onApplyMaintenanceClick" styleClass="basicButton" text="Maintenance" />
-      <AnchorPane fx:id="maintenanceInputPane" layoutX="1086.0" layoutY="85.0" prefHeight="37.0" prefWidth="321.0" style="-fx-border-color: blue; -fx-border-width: 3;">
+      <AnchorPane fx:id="maintenanceInputPane" layoutX="1086.0" layoutY="85.0" prefHeight="37.0" prefWidth="321.0">
          <children>
                <ComboBox fx:id="maintenanceTaskCombobox" layoutX="191.0" layoutY="10.0" maxWidth="130.0" minWidth="130.0" onAction="#changeTaskType" prefWidth="130.0" styleClass="combo-box">
                </ComboBox>
@@ -50,9 +50,9 @@
          </children>
       </AnchorPane>
 
-      <AnchorPane fx:id="conditionInputPane" layoutX="1086.0" layoutY="85.0" prefHeight="37.0" prefWidth="321.0" style="-fx-border-color: blue; -fx-border-width: 3;">
+      <AnchorPane fx:id="conditionInputPane" layoutX="1086.0" layoutY="85.0" prefHeight="37.0" prefWidth="321.0">
          <children>
-            <ComboBox fx:id="conditionTypeComboBox" layoutX="191.0" layoutY="10.0" maxWidth="130.0" minWidth="130.0" onAction="#changeTaskType" prefWidth="130.0" styleClass="combo-box">
+            <ComboBox fx:id="conditionTypeComboBox" layoutX="191.0" layoutY="10.0" maxWidth="130.0" minWidth="130.0" onAction="#changeConditionType" prefWidth="130.0" styleClass="combo-box">
                <items>
                   <FXCollections fx:factory="observableArrayList">
                      <String fx:value="OVERALL" />
@@ -78,5 +78,6 @@
          </children>
       </AnchorPane>
          <Label fx:id="dateErrorLabel" layoutX="1140.0" layoutY="193.0" prefHeight="30.0" prefWidth="220.0" styleClass="smallText" />
+       <Button layoutX="1111.0" layoutY="531.0" mnemonicParsing="false" onMouseClicked="#onUpdateClick" styleClass="basicButton" text=" UPDATE" />
    </children>
 </AnchorPane>
