--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -50,11 +50,11 @@
                             <AnchorPane fx:id="temperaturePane" layoutX="3.0" layoutY="62.0" prefHeight="523.0" prefWidth="823.0">
            <Label fx:id="weatherLabel" layoutX="50.0" layoutY="40.0" styleClass="basicText" text="WEATHER" />
            <Label fx:id="dateLabel" layoutX="212.0" layoutY="40.0" prefHeight="35.0" prefWidth="498.0" styleClass="basicText" />
-           <Label fx:id="todayLabel" layoutX="50.0" layoutY="105.0" onMouseClicked="#onNowClick" prefHeight="47.0" prefWidth="122.0" styleClass="basicHeading" text="TODAY" />
+           <Label fx:id="todayLabel" layoutX="50.0" layoutY="105.0" onMouseClicked="#onTodayClick" prefHeight="47.0" prefWidth="122.0" styleClass="basicHeading" text="TODAY" />
            <Label fx:id="tomorrowLabel" layoutX="212.0" layoutY="105.0" onMouseClicked="#onTomorrowClick" prefHeight="47.0" prefWidth="212.0" styleClass="basicHeading" text="TOMORROW" />
            <Label fx:id="dATomorrowLabel" layoutX="464.0" layoutY="105.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
 
-                                <Label fx:id="nowLabel" layoutX="140.0" layoutY="162.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
+                                <Label fx:id="todayLabel" layoutX="140.0" layoutY="162.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
            <Label fx:id="tempRightNowLabel" layoutX="140.0" layoutY="209.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" />
            <Label layoutX="320.0" layoutY="162.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" text="Highest" />
            <Label fx:id="tempMaxLabel" layoutX="320.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
@@ -64,7 +64,7 @@
 
                                 <Label layoutX="49.0" layoutY="318.0" styleClass="bigTextGreen" text="Calculate values from given date" />
            <Label layoutX="141.0" layoutY="375.0" styleClass="basicTextWhite" text="Select date" />
-           <DatePicker fx:id="chooseDay" layoutX="116.0" layoutY="423.0" onAction="#saveDate" />
+           <DatePicker fx:id="tempDatePicker" layoutX="116.0" layoutY="423.0" onAction="#saveTempDate" />
            <Button fx:id="avgTempButton" layoutX="369.0" layoutY="367.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
            <Label fx:id="avgLabel" layoutX="612.0" layoutY="378.0" prefHeight="17.0" prefWidth="113.0" styleClass="smallText" />
            <Button fx:id="minMaxTempButton" layoutX="366.0" layoutY="436.0" mnemonicParsing="false" onAction="#onMinMaxBtnClick" styleClass="basicButton" text="MIN-MAX TEMP" />
