--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/preferences.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/preferences.fxml
@@ -43,5 +43,6 @@
       </ComboBox>
       <Button layoutX="134.0" layoutY="448.0" mnemonicParsing="false" onAction="#setPreferences" styleClass="basicButton" text="Save preferences" />
       <Label layoutX="58.0" layoutY="314.0" styleClass="smallHeading" text="MAINTENANCE" />
+      <Label fx:id="preferencesSavedLabel" layoutX="97.0" layoutY="396.0" prefHeight="30.0" prefWidth="320.0" styleClass="smallText" />
    </children>
 </AnchorPane>
