--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/home.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/home.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.HomeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="background" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.HomeController">
    <children>
-      <Label prefHeight="278.0" prefWidth="549.0" styleClass="bigText" text="This application is designed for road and weather data collection. It provides quick and easy ways to view data at a desired location. The data can also be imported and saved from the application." wrapText="true" />
+      <Label alignment="TOP_LEFT" layoutX="20.0" layoutY="20.0" prefHeight="253.0" prefWidth="800.0" styleClass="bigText" text="Welcome to roadwatch! This app is designed to combine weather and road information to help you figure out your traveling needs in Finland." textAlignment="JUSTIFY" wrapText="true" />
    </children>
 </AnchorPane>
