--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/combine.fxml
@@ -23,10 +23,11 @@
                    <NumberAxis fx:id="yAxis" side="LEFT" />
                </yAxis>
            </LineChart>
-           <Button fx:id="windButton" layoutX="135.0" layoutY="531.0" mnemonicParsing="false" onAction="#onWindButtonClicked" styleClass="basicButton" text="WIND" />
-           <Button fx:id="visibilityButton" layoutX="247.0" layoutY="531.0" mnemonicParsing="false" onAction="#onVisibilityButtonClicked" styleClass="basicButton" text="VISIBILITY" />
+           <Button fx:id="temperatureButton" layoutX="14.0" layoutY="532.0" mnemonicParsing="false" onAction="#onTemperatureButtonClicked" styleClass="basicButton" text="TEMPERATURE" />
+           <Button fx:id="windButton" layoutX="229.0" layoutY="532.0" mnemonicParsing="false" onAction="#onWindButtonClicked" styleClass="basicButton" text="WIND" />
+           <Button fx:id="visibilityButton" layoutX="345.0" layoutY="532.0" mnemonicParsing="false" onAction="#onVisibilityButtonClicked" styleClass="basicButton" text="VISIBILITY" />
 
-           <Label fx:id="chartErrorLabel" layoutX="411.0" layoutY="542.0" prefHeight="30.0" prefWidth="609.0" styleClass="smallText" />
+           <Label fx:id="chartErrorLabel" layoutX="145.0" layoutY="502.0" prefHeight="30.0" prefWidth="609.0" styleClass="smallText" />
        </AnchorPane>
        <PieChart fx:id="conditionChart" labelLineLength="0.0" labelsVisible="false" layoutX="717.0" layoutY="31.0" maxHeight="500.0" maxWidth="360.0" minHeight="500.0" minWidth="360.0" prefHeight="500.0" prefWidth="360.0" title="ConditionChart" />
        <PieChart fx:id="maintenanceChart" labelLineLength="0.0" labelsVisible="false" layoutX="717.0" layoutY="25.0" maxHeight="500.0" maxWidth="360.0" minHeight="500.0" minWidth="360.0" prefHeight="500.0" prefWidth="360.0" title="MaintenanceChart" />
@@ -81,6 +82,6 @@
        <Button layoutX="1199.0" layoutY="405.0" mnemonicParsing="false" onMouseClicked="#onUpdateClick" styleClass="basicButton" text=" UPDATE" />
       <Button fx:id="saveButton" layoutX="1327.0" layoutY="481.0" mnemonicParsing="false" onMouseClicked="#onSaveButtonClick" styleClass="basicButton" text="SAVE" />
       <Button fx:id="loadButton" layoutX="1324.0" layoutY="538.0" mnemonicParsing="false" onMouseClicked="#onLoadButtonClick" styleClass="basicButton" text="LOAD" />
-      <ComboBox fx:id="dataTypeCombobox" layoutX="1218.0" layoutY="484.0" maxWidth="95.0" prefWidth="95.0" styleClass="combo-box"/>
+      <ComboBox fx:id="dataTypeCombobox" layoutX="1218.0" layoutY="484.0" maxWidth="95.0" prefWidth="95.0" styleClass="combo-box" />
    </children>
 </AnchorPane>
