--- a/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
+++ b/roadwatch/src/main/resources/fi/tuni/roadwatch/fxml/weather.fxml
@@ -2,19 +2,20 @@
 
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<AnchorPane maxHeight="610.0" maxWidth="950.0" minHeight="610.0" minWidth="950.0" prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
+<AnchorPane maxHeight="610.0" maxWidth="950.0" minHeight="610.0" minWidth="950.0" prefHeight="620.0" prefWidth="840.0" styleClass="background" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fi.tuni.roadwatch.WeatherController">
    <children>
 
        <AnchorPane fx:id="chartPane" layoutX="3.0" layoutY="125.0" prefHeight="548.0" prefWidth="823.0">
+           <Label fx:id="chartErrorLabel" layoutX="580.0" layoutY="440.0" prefHeight="30.0" prefWidth="460.0" styleClass="smallText" />
            <LineChart fx:id="lineChart" layoutX="20.0" layoutY="-45.0" prefHeight="479.0" prefWidth="700.0">
                <xAxis>
                    <CategoryAxis side="BOTTOM" fx:id="xAxis" />
@@ -24,8 +25,9 @@
                </yAxis>
            </LineChart>
            <Label fx:id="label" layoutX="43.0" layoutY="493.0" prefHeight="58.0" prefWidth="138.0" styleClass="valueText" />
-           <Button fx:id="windButton" layoutX="230.0" layoutY="427.0" mnemonicParsing="false" onAction="#onWindButtonClicked" styleClass="basicButton" text="WIND" />
-           <Button fx:id="visibilityButton" layoutX="380.0" layoutY="427.0" mnemonicParsing="false" onAction="#onVisibilityButtonClicked" styleClass="basicButton" text="VISIBILITY" />
+         <Button fx:id="temperatureButton" layoutX="80.0" layoutY="427.0" mnemonicParsing="false" onAction="#onTemperatureButtonClicked" styleClass="basicButton" text="TEMPERATURE" />
+           <Button fx:id="windButton" layoutX="300.0" layoutY="427.0" mnemonicParsing="false" onAction="#onWindButtonClicked" styleClass="basicButton" text="WIND" />
+           <Button fx:id="visibilityButton" layoutX="420.0" layoutY="427.0" mnemonicParsing="false" onAction="#onVisibilityButtonClicked" styleClass="basicButton" text="VISIBILITY" />
            <AnchorPane fx:id="datePickerPane" layoutX="740.0" layoutY="102.0" prefHeight="264.0" prefWidth="191.0">
                <Label fx:id="startDateLabel" layoutX="17.0" styleClass="smallText" text="Select start date" />
                <Label fx:id="endDateLabel" layoutX="17.0" layoutY="92.0" styleClass="smallText" text="Select end date" />
@@ -33,7 +35,6 @@
                <DatePicker fx:id="endDatePicker" layoutX="17.0" layoutY="122.0" />
              <Button layoutX="24.0" layoutY="178.0" mnemonicParsing="false" onMouseClicked="#onUpdateClick" prefWidth="161.0" styleClass="basicButton" text=" UPDATE" />
            </AnchorPane>
-           <Label fx:id="chartErrorLabel" layoutX="230.0" layoutY="500.0" prefHeight="30.0" prefWidth="460.0" styleClass="smallText" text="t" />
        </AnchorPane>
 
       <Label contentDisplay="CENTER" layoutX="34.0" layoutY="33.0" styleClass="bigTextGreen" text="Choose datatype" />
@@ -47,14 +48,14 @@
       </ComboBox>
        <Label fx:id="datatypeLabel" contentDisplay="CENTER" layoutX="466.0" layoutY="21.0" prefHeight="70.0" prefWidth="360.0" styleClass="basicHeadingLightBlue" />
 
-                            <AnchorPane fx:id="temperaturePane" layoutX="3.0" layoutY="62.0" prefHeight="523.0" prefWidth="823.0">
+                               <AnchorPane fx:id="temperaturePane" layoutX="3.0" layoutY="62.0" prefHeight="523.0" prefWidth="823.0">
            <Label fx:id="weatherLabel" layoutX="50.0" layoutY="40.0" styleClass="basicText" text="WEATHER" />
            <Label fx:id="dateLabel" layoutX="212.0" layoutY="40.0" prefHeight="35.0" prefWidth="498.0" styleClass="basicText" />
            <Label fx:id="todayLabel" layoutX="50.0" layoutY="105.0" onMouseClicked="#onTodayClick" prefHeight="47.0" prefWidth="122.0" styleClass="basicHeading" text="TODAY" />
            <Label fx:id="tomorrowLabel" layoutX="212.0" layoutY="105.0" onMouseClicked="#onTomorrowClick" prefHeight="47.0" prefWidth="212.0" styleClass="basicHeading" text="TOMORROW" />
            <Label fx:id="dATomorrowLabel" layoutX="464.0" layoutY="105.0" onMouseClicked="#onDATomorrowClick" prefHeight="47.0" prefWidth="381.0" styleClass="basicHeading" text="DAY AFTER TOMORROW" />
 
-                                <Label fx:id="todayLabel" layoutX="140.0" layoutY="162.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
+                                   <Label fx:id="todayDataLabel" layoutX="140.0" layoutY="162.0" prefHeight="47.0" prefWidth="113.0" styleClass="basicHeadingWhite" text="Now" />
            <Label fx:id="tempRightNowLabel" layoutX="140.0" layoutY="209.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" />
            <Label layoutX="320.0" layoutY="162.0" prefHeight="47.0" prefWidth="139.0" styleClass="basicHeadingWhite" text="Highest" />
            <Label fx:id="tempMaxLabel" layoutX="320.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
@@ -62,7 +63,7 @@
            <Label fx:id="tempMinLabel" layoutX="500.0" layoutY="209.0" prefHeight="47.0" prefWidth="138.0" styleClass="basicHeadingWhite" />
            <Label fx:id="tempErrorLabel" layoutX="140.0" layoutY="256.0" prefHeight="47.0" styleClass="smallText" />
 
-                                <Label layoutX="49.0" layoutY="318.0" styleClass="bigTextGreen" text="Calculate values from given date" />
+                                   <Label layoutX="49.0" layoutY="318.0" styleClass="bigTextGreen" text="Calculate values from given date" />
            <Label layoutX="141.0" layoutY="375.0" styleClass="basicTextWhite" text="Select date" />
            <DatePicker fx:id="tempDatePicker" layoutX="116.0" layoutY="423.0" onAction="#saveTempDate" />
            <Button fx:id="avgTempButton" layoutX="369.0" layoutY="367.0" mnemonicParsing="false" onAction="#onAvgBtnClick" styleClass="basicButton" text="AVERAGE TEMP" />
